Adding image upload - not currently working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.analysis.typeCheckingMode": "basic"
+    "python.analysis.typeCheckingMode": "basic",
+    "cSpell.words": [
+        "fastapi",
+        "ollama",
+        "pydantic",
+        "uvicorn"
+    ]
 }
